chore: prevent css purge and adjust font-size on small screen

--- a/assets/stylesheet/main.scss
+++ b/assets/stylesheet/main.scss
@@ -1,3 +1,5 @@
+/* purgecss start ignore */
+
 @font-face {
   font-family: 'Product Sans';
   src: url('../fonts/product-sans-regular.ttf');
@@ -13,13 +15,17 @@
 html {
   font-family: 'Product Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, 'Helvetica Neue', Arial, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
+
+  @screen sm {
+    font-size: 16px;
+  }
 }
 
 *,
@@ -59,3 +65,5 @@ html {
     max-width: 1024px;
   }
 }
+
+/* purgecss end ignore */
